--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1 id="geo_loc"></h1>
+    <p id="geo_loc"></p>
     <script>
         function getElement(id) {
             return typeof id === 'string' ? document.getElementById(id) : id;
